# godot-beginner-2d-platformer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: labels.yml
godot/: project.godot
godot/assets/: tileset.tres
godot/libraries/: libgodot_beginner_2d_platformer.dylib  rust.tres
godot/src/Actors/: Enemy.gdns  Enemy.tscn  Player.gdns  Player.tscn
godot/src/Levels/: LevelTemplate.tscn
godot/src/Objects/: Coin.tscn
src/: lib.rs
src/actors/: actor.rs  enemy.rs  mod.rs  player.rs
